warn about copyright abuse: non-commercial purposes ONLY !

--- a/private/index.html
+++ b/private/index.html
@@ -30,6 +30,7 @@ Tocadisco feat Julian Smith - Fuck That
 <hr>
 
 <h2>the best Sydney DJs that I have known and loved (none of whom are associated with this website), listed in no particular order</h2>
+<h2>respect copyright and do not use for commercial purposes</h2>
 <hr>
 
 <h1>DJ Mike Kelly</h1>
@@ -288,4 +289,3 @@ another experimental track & cue jumping (starts well but ends terribly)</br>
 <!-- End of SimpleHitCounter Code -->
 </body>
 </html>
-
