--- a/private/index.html
+++ b/private/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 <title>Hi-Fi</title>
+<link href="index.css" rel="stylesheet" type="text/css">
 <script type="text/javascript" src="http://scmplayer.co/script.js"
 data-config="{'skin':'skins/black/skin.css',
 'volume':30,
@@ -10,35 +11,46 @@ data-config="{'skin':'skins/black/skin.css',
 'placement':'top',
 'showplaylist':false,
 'playlist':[
-{'title':'dedicate1','url':'http://128.199.200.202/fuckthat.mp3'},
-{'title':'dedicate2','url':'http://128.199.200.202/clubsexy.mp3'}]}">
+{'title':'Track 1','url':'http://128.199.200.202/fuckthat.mp3'},
+{'title':'Track 2','url':'http://128.199.200.202/clubsexy.mp3'}]}">
 </script>
 </head>
 <body>
+
+Yotto at Anjunadeep Open Air NYC
+<br>
+<video width="240" height="160" controls="controls">
+<source src="http://128.199.200.202/YottoNYC.mp4" type="video/mp4">
+</video>
+
 <hr>
+<br>
 Deelite - Groove Is In The Heart (Marbrax 2017 Remix)
-</br/>
+<br><br>
 <audio controls="controls" >
 <source src="http://128.199.200.202/Deelite-Marbax.mp3" type="audio/mpeg">
 </audio>
-</br/>
-Tocadisco feat Julian Smith - Fuck That
-</br>
+<br><br>
+
+Tocadisco feat Julian Smith
+<br><br>
+<img src="fuck-that-sign.jpg">
+<br><br>
 <audio controls="controls" >
 <source src="http://128.199.200.202/fuckthat.mp3" type="audio/mpeg">
 </audio>
 <hr>
 
-<h2>the best Sydney DJs that I have known and loved (none of whom are associated with this website), listed in no particular order</h2>
-<h2>respect copyright and do not use for commercial purposes</h2>
+<h1>the best Sydney DJs that I have known and loved (none of whom are associated with this website), listed in no particular order</h1>
+<h1>respect copyright and do not use for commercial purposes</h1>
 <hr>
 
 <h1>DJ Mike Kelly</h1>
 <a href="http://www.djmikekelly.com/">DJ Mike Kelly</a>
-</br>
-</br>
+<br>
+<br>
 <a href="https://www.mixcloud.com/djmikekelly/2018-dj-mike-kelly-terrace-sexy-house-mix/">Terrace Sexy House Mix</a>
-</br>
+<br>
 <h2>Funhouse XXL Warm-up For Amsterdam</h2>
 <audio controls="controls" >
 <source src="http://128.199.200.202/funhouse.mp3" type="audio/mpeg">
@@ -47,10 +59,10 @@ Tocadisco feat Julian Smith - Fuck That
 
 <h1>DJ Paul Goodyear</h1>
 <a href="http://www.djpaulgoodyear.com/">DJ Paul Goodyear</a>
-</br>
-</br>
+<br>
+<br>
 <a href="http://soundcloud.com/sanfrandisko">SanFranDisko</a>
-</br>
+<br>
 <h2>a cool house track</h2>
 <audio controls="controls" >
 <source src="http://128.199.200.202/COOL_HOUSE.mp3" type="audio/mpeg">
@@ -73,13 +85,13 @@ Tocadisco feat Julian Smith - Fuck That
 
 <h1>DJ Rob Davis</h1>
 <a href="https://www.djrobdavis.com/">DJ Rob Davis</a>
-</br>
-</br>
+<br>
+<br>
 <iframe scrolling="no" id="hearthis_at_track_1754498" width="100%" height="150" src="https://hearthis.at/embed/1754498/transparent_black/?hcolor=&color=&style=2&block_size=2&block_space=1&background=1&waveform=0&cover=0&autoplay=0&css=" frameborder="0" allowtransparency allow="autoplay"><p>Listen to <a href="https://hearthis.at/djrobdavis/180208-dj-rob-davis-so-bitchin-soul-deep/" target="_blank">DJ Rob Davis - So Bitchin... Soul Deep</a> <span>by</span><a href="https://hearthis.at/djrobdavis/" target="_blank" >Rob Davis</a> <span>on</span> <a href="https://hearthis.at/" target="_blank">hearthis.at</a></p></iframe>
-</br>
-</br>
+<br>
+<br>
 <a href="http://soundcloud.com/andrew-egerszegi/rob-davis-one-monday-at-arq">Rob one Monday morning ...</a>
-</br>
+<br>
 <h2>Crazy 12' Almighty Mix</h2>
 <audio controls="controls" >
 <source src="http://128.199.200.202/Crazy.mp3" type="audio/mpeg">
@@ -88,7 +100,7 @@ Tocadisco feat Julian Smith - Fuck That
 
 <h1>DJ Mark Alsop</h1>
 <a href="http://www.markalsop.com">DJ Mark Alsop</a>
-</br>
+<br>
 <h2>SplashBack 10 Track 3, SB 4 Track 3</h2>
 <audio controls="controls" >
 <source src="http://128.199.200.202/MA-SB10-T3.mp3" type="audio/mpeg">
@@ -100,7 +112,7 @@ Tocadisco feat Julian Smith - Fuck That
 
 <h1>Danny Ooh Yeah</h1>
 <a href="http://www.mixcloud.com/tunaep/">Danny Ooh Yeah on Mixcloud</a>
-</br>
+<br>
 <h2>Just Let Me Dance</h2>
 <audio controls="controls" >
 <source src="http://128.199.200.202/justlemedance.mp3" type="audio/mpeg">
@@ -109,7 +121,7 @@ Tocadisco feat Julian Smith - Fuck That
 
 <h1>DJ Baby Bear</h1>
 <a href="http://djbabybear.com.au/">DJ Baby Bear</a>
-</br>
+<br>
 <h2>Soulful House</h2>
 <audio controls="controls" >
 <source src="http://128.199.200.202/djbabybear_2018-03-28T01_30_09-07_00.mp3" type="audio/mpeg">
@@ -118,7 +130,7 @@ Tocadisco feat Julian Smith - Fuck That
 
 <h1>DJ Scott Pullen</h1>
 <a href="http://scottpullen.com">DJ Scott Pullen</a>
-</br>
+<br>
 <h2>Love & Music</h2>
 <audio controls="controls" >
 <source src="http://128.199.200.202/Love-and-Music.mp3" type="audio/mpeg">
@@ -134,7 +146,7 @@ Tocadisco feat Julian Smith - Fuck That
 
 <h1>DJ James Tobin</h1>
 <a href="http://www.djjamestobin.com/">DJ James Tobin</a>
-</br>
+<br>
 <h2>House Music [22.02.2018]</h2>
 <audio controls="controls" >
 <source src="http://128.199.200.202/DJ-James_Tobin.mp3" type="audio/mpeg">
@@ -143,7 +155,7 @@ Tocadisco feat Julian Smith - Fuck That
 
 <h1>DJ Kitty Glitter</h1>
 <a href="http://www.djkittyglitter.com/">DJ Kitty Glitter</a>
-</br>
+<br>
 <h2>Little Dick Sexo Muthafuka bootleg</h2>
 <audio controls="controls" >
 <source src="http://128.199.200.202/KGlittledick.mp3" type="audio/mpeg">
@@ -153,137 +165,138 @@ Tocadisco feat Julian Smith - Fuck That
 <h2>Me (most of following tracks courtesy of Rob Davis and Mark Alsop)</h2>
 
 Narcotic Thrust v (I forgot)
-</br>
+<br><br>
 <audio controls="controls" >
 <source src="http://128.199.200.202/NarcThrustMash.mp3" type="audio/mpeg">
 </audio>
 
-</br>
+<br><br>
 Lost and Found 2
-</br>
+<br><br>
 <audio controls="controls" >
 <source src="http://128.199.200.202/Lost+Found_track2.wav" type="audio/mpeg">
 </audio>
 
-</br>
+<br><br>
 Ito &Star v_Sudoko Kid (SeXXX-rated mix)
-</br>
+<br><br>
 <audio controls="controls" >
 <source src="http://128.199.200.202/sexrated.mp3" type="audio/mpeg">
 </audio>
 
-</br>
+<br><br>
 75 Brazil St (remixed)
-</br>
+<br><br>
 <audio controls="controls" >
 <source src="http://128.199.200.202/75BrazilSt.mp3" type="audio/mpeg">
 </audio>
 
-</br>
+<br><br>
 Take Control - an old totally reworked soul track of Kate Monroe's
-</br>
+<br><br>
 <audio controls="controls" >
 <source src="http://128.199.200.202/TakeControl.mp3" type="audio/mpeg">
 </audio>
 
-</br>
+<br><br>
 a Mark Alsop and Collin Gaff track (messy mix)
-</br>
+<br><br>
 <audio controls="controls" >
 <source src="http://128.199.200.202/MA_and_CG_Track_1_remix.mp3" type="audio/mpeg">
 </audio>
 
-</br>
+<br><br>
 I can't remember !
-</br>
+<br><br>
 <audio controls="controls" >
 <source src="http://128.199.200.202/unknown2.mp3" type="audio/mpeg">
 </audio>
 
-</br>
-Dab Hands - Do Your Own Thing v a Mark Alsop Splashback track
-</br>
+<br><br>
+Dab Hands - Do Your Own Thing v a Mark Alsop Splashback track 
+<br><br>
 <audio controls="controls" >
 <source src="http://128.199.200.202/DYOTvsMa.mp3" type="audio/mpeg">
 </audio>
 
-</br>
+<br><br>
 Back in Time (Drugged mix)
-</br>
+<br><br>
 <audio controls="controls" >
 <source src="http://128.199.200.202/BackInTime.mp3" type="audio/mpeg">
 </audio>
 
-</br>
+<br><br>
 DMC Ice Run (mashup)
-</br>
+<br><br>
 <audio controls="controls" >
 <source src="http://128.199.200.202/DMC_Ice_Run.mp3" type="audio/mpeg">
 </audio>
 
-</br>
+<br><br>
 Up the Downpipe (mashup)
-</br>
+<br><br>
 <audio controls="controls" >
 <source src="http://128.199.200.202/UptheDownpipe.mp3" type="audio/mpeg">
 </audio>
 
-</br>
+<br><br>
 Lovin' v Paris to Berlin
-</br>
+<br><br>
 <audio controls="controls" >
 <source src="http://128.199.200.202/Loving_Paris_to_Belin.mp3" type="audio/mpeg">
 </audio>
 
-</br>
+<br><br>
 Mixed up
-</br>
+<br><br>
 <audio controls="controls" >
 <source src="http://128.199.200.202/Thats_a_bit_mixed_up.mp3" type="audio/mpeg">
 </audio>
 
-</br>
+<br><br>
 Deep Groove
-</br>
+<br><br>
 <audio controls="controls" >
 <source src="http://128.199.200.202/deepgroove.mp3" type="audio/mpeg">
 </audio>
 
-</br>
+<br><br>
 an experimental percussive thing
-</br>
+<br><br>
 <audio controls="controls" >
 <source src="http://128.199.200.202/Percussive.mp3" type="audio/mpeg">
 </audio>
 
-</br>
+<br><br>
 Another great Mark Alsop's Splashback track (reblocked mix)
-</br>
+<br><br>
 <audio controls="controls" >
 <source src="http://128.199.200.202/My.Mate.Slam.mp3" type="audio/mpeg">
 </audio>
 
-</br>
+<br><br>
 Evacuate the Dancefloor (mashup)
-</br>
+<br><br>
 <audio controls="controls" >
 <source src="http://128.199.200.202/T9vEvacuate.mp3" type="audio/mpeg">
 </audio>
 
-</br>
+<br><br>
 a "combine-harvestor" mashup (haha, Rob's name for "Traktor" remixes)
-</br>
+<br><br>
 <audio controls="controls" >
 <source src="http://128.199.200.202/unknown.mp3" type="audio/mpeg">
 </audio>
 
-</br>
-another experimental track & cue jumping (starts well but ends terribly)</br>
+<br><br>
+another experimental track & cue jumping (starts well but ends terribly)<br>
+<br><br>
 <audio controls="controls" >
 <source src="http://128.199.200.202/track_and_cue_jumper.wav" type="audio/mpeg">
 </audio>
 
-</br></br>
+<br><br>
 <!-- Start of SimpleHitCounter Code -->
 <div align="center"><a href="http://www.simplehitcounter.com" target="_blank"><img src="http://simplehitcounter.com/hit.php?uid=2344094&f=255&b=16777215" border="0" height="18" width="83" alt="web counter"></a><br><a href="http://www.simplehitcounter.com" target="_blank" style="text-decoration:none;">web counter</a></div>
 <!-- End of SimpleHitCounter Code -->
