added favicon support

--- a/private/index.html
+++ b/private/index.html
@@ -2,6 +2,8 @@
 <head>
 <title>Hi-Fi</title>
 <link href="index.css" rel="stylesheet" type="text/css">
+<link rel="shortcut icon" type="image/png" href="http://128.199.200.202/private/favicon.png"/>
+
 <script type="text/javascript" src="http://scmplayer.co/script.js"
 data-config="{'skin':'skins/black/skin.css',
 'volume':30,
@@ -14,17 +16,41 @@ data-config="{'skin':'skins/black/skin.css',
 {'title':'Track 1','url':'http://128.199.200.202/fuckthat.mp3'},
 {'title':'Track 2','url':'http://128.199.200.202/clubsexy.mp3'}]}">
 </script>
-</head>
-<body>
 
-Yotto at Anjunadeep Open Air NYC
+<style>
+h3 {
+    text-align: center;
+}
+</style>
+</head>
+
+<body>
+<hr>
+<h3 style="font-family:verdana;">House Cats</h3>
+<h3 style="font-family:verdana;">please respect copyright and do not use for commercial purposes</h3>
+<hr>
+
+Yotto at Anjunadeep Open Air NYC (Smooth Tech House)
 <br>
 <video width="240" height="160" controls="controls">
 <source src="http://128.199.200.202/YottoNYC.mp4" type="video/mp4">
 </video>
-
 <hr>
-<br>
+
+Boogie Shoes (MNG Remix) - K.C. And The Sunshine Band
+<br><br>
+<audio controls="controls" >
+<source src="http://128.199.200.202/boogie_shoes.mp3" type="audio/mpeg">
+</audio>
+<br><br>
+
+Dr. Alban - Sing Hallelujah (setup Remix)
+<br><br>
+<audio controls="controls" >
+<source src="http://128.199.200.202/dr_alban.mp3" type="audio/mpeg">
+</audio>
+<br><br>
+
 Deelite - Groove Is In The Heart (Marbrax 2017 Remix)
 <br><br>
 <audio controls="controls" >
@@ -39,10 +65,35 @@ Tocadisco feat Julian Smith
 <audio controls="controls" >
 <source src="http://128.199.200.202/fuckthat.mp3" type="audio/mpeg">
 </audio>
+<br><br>
+
+Dead Or Alive - You Spin Me Right Round - Nicky Bootleg
+<br><br>
+<audio controls="controls" >
+<source src="http://128.199.200.202/deadoralive.mp3" type="audio/mpeg">
+</audio>
+<br><br>
+
+Frankie Goes To Hollywood - Relax (Toty Beat Tech N Sound 2014)
+<br><br>
+<audio controls="controls" >
+<source src="http://128.199.200.202/Frankie.mp3" type="audio/mpeg">
+</audio>
+
+<hr>
+<h1 style="font-family:verdana;">the best Sydney DJs that I have known and loved (none of whom are associated with this website), listed in no particular order</h1>
 <hr>
 
-<h1>the best Sydney DJs that I have known and loved (none of whom are associated with this website), listed in no particular order</h1>
-<h1>respect copyright and do not use for commercial purposes</h1>
+<h1>DJ Feisty v (the late) DJ Mandy Rollins 'Q Ball Mix' (2013)</h1>
+<audio controls="controls" >
+<source src="http://128.199.200.202/private/100115 Feisty v Rollins Q Ball Mix.mp3" type="audio/mpeg">
+</audio>
+<br><br>
+<a href="https://extradirty.com.au/about">EXTRA DIRTY TRIBE</a>
+<br>
+<br>
+<iframe width="100%" height="150" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/504218370&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
+<br>
 <hr>
 
 <h1>DJ Mike Kelly</h1>
@@ -62,6 +113,11 @@ Tocadisco feat Julian Smith
 <br>
 <br>
 <a href="http://soundcloud.com/sanfrandisko">SanFranDisko</a>
+<br>
+<h2>Take Me to Heaven [Goodyear's 2006 Mix]</h2>
+<audio controls="controls" >
+<source src="http://128.199.200.202/private/take_me_to_heaven.mp3" type="audio/mpeg">
+</audio>
 <br>
 <h2>a cool house track</h2>
 <audio controls="controls" >
@@ -99,6 +155,8 @@ Tocadisco feat Julian Smith
 <hr>
 
 <h1>DJ Mark Alsop</h1>
+<div class="inner" id="msg_44694"><a href="http://en.wikipedia.org/wiki/Mark Alsop" target="_blank" style="border-bottom:1px dashed #FF0000;text-decoration:none" class="wiki_link">Mark Alsop</a><sup><span style="font-size:7pt;color:red;" class="wiki_sup">Wiki</span></sup></div>
+<br>
 <a href="http://www.markalsop.com">DJ Mark Alsop</a>
 <br>
 <h2>SplashBack 10 Track 3, SB 4 Track 3</h2>
@@ -108,6 +166,8 @@ Tocadisco feat Julian Smith
 <audio controls="controls" >
 <source src="http://128.199.200.202/MA-SB04-T03.mp3" type="audio/mpeg">
 </audio>
+<br><br>
+<iframe width="100%" height="150" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/196063723&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
 <hr>
 
 <h1>Danny Ooh Yeah</h1>
@@ -213,7 +273,7 @@ I can't remember !
 </audio>
 
 <br><br>
-Dab Hands - Do Your Own Thing v a Mark Alsop Splashback track 
+Dab Hands - Do Your Own Thing v a Mark Alsop Splashback track
 <br><br>
 <audio controls="controls" >
 <source src="http://128.199.200.202/DYOTvsMa.mp3" type="audio/mpeg">
@@ -287,13 +347,6 @@ a "combine-harvestor" mashup (haha, Rob's name for "Traktor" remixes)
 <br><br>
 <audio controls="controls" >
 <source src="http://128.199.200.202/unknown.mp3" type="audio/mpeg">
-</audio>
-
-<br><br>
-another experimental track & cue jumping (starts well but ends terribly)<br>
-<br><br>
-<audio controls="controls" >
-<source src="http://128.199.200.202/track_and_cue_jumper.wav" type="audio/mpeg">
 </audio>
 
 <br><br>
